2016-05-06 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* Include/global_variables.h, callbacks/volume_ops.c,
	menu/input_menu.c: Add '[' and ']' keys to move more quickly
	through slice coordinates.

2016-05-05 Robert D. Vincent <robert.d.vincent@mcgill.ca>
	* slice_window/{draw_slice.c, view.c}, Include/global_variables.h:
	Show both voxel and world coordinates of the crosshair cursor
	in the slice window.

2016-04-28  Claude Lepage <claude@bic.mni.mcgill.ca>
   * callbacks/polygon_ops.c, menu/input.menu.c, menu/Display.menu.include,
     Include/global_variables.h, Include/display_prototypes: Add support
     for vector-based annotations of triangulated surfaces.

2016-04-28  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * input_files/input_files.c: Warn user if they load a volume with
	a non-rigid transform, as this can lead to weird shearing effects.

2016-04-19  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * callbacks/render_ops.c, main/graphics.c, slice_window/colour_bar.c,
	structures/render.c, Include/display_types.h: Add support for
	wireframe overlay and point rendering modes. Requires updated
	bicgl.

2016-02-23  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/intensity_plot.c (and elsewhere): Add intensity plot
	that mimics and extends some old xdisp features.

2016-01-22  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * slice_window/slice_events.c, etc.: Finally add a measurement feature
	very similar to that of BrainBrowser. Ctrl+Left Click now starts
	displaying a line and length that can be dragged around the slice.
2016-01-20  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * various: Add rulers for Ayca and the Petrides lab. These are toggled
	using the F10 key.

2016-01-20  Robert D. Vincent <robert.d.vincent@mcgill.ca>
   * main/three_d.c, etc.: Simple autorotation feature tied to F12 key for now

2016-01-16  Robert D. Vincent <robert.d.vincent@mcgill.ca>