@@ -1,3 +1,8 @@
+2016-05-07 Robert D. Vincent <robert.d.vincent@mcgill.ca>
+	* main/main.c, callbacks/quit.c, et al.: Implement "Save
+	Globals" command to store the current global configuration
+	to a file.
+
 2016-05-06 Robert D. Vincent <robert.d.vincent@mcgill.ca>
 	* Include/global_variables.h, callbacks/volume_ops.c,
 	menu/input_menu.c: Add '[' and ']' keys to move more quickly
